# proyecto_suelos

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Doxyfile  README.md  TODO.md  hdnum.hh
benchmark/: CMakeLists.txt  README.md  mv.cpp  operator_star.cpp  operator_star_direct.cpp
examples/Guille/: Hola.cpp  Makefile  comandos.txt  ejecucion3.sh  ejecutable4.sh  euler  euler.cc
examples/basic/: Makefile  apuntadores01.cc  apuntadores_arreglos.cc  apuntadores_arreglos2.cc  bool.cpp  cambio_enteros.cpp  eje_pois.sh  ejecucion.sh  euler.cc  gauss.cc  gauss_trsup.cc  grafica01.plt  hello.cpp  holamundo.cc  matrices01  matrices01.cc  matrices02  matrices02.cc  pointer01.cc  pointer02.cc  poisson01  poisson01.cc  primero  primeros  primeros.cc  producto_mat.cc  pruebas01.cc  random.cpp  sistema  sistema.cc  solucionar.m  struct01.cc  struct03.cc  struct04.cc  vector.cc  vector6.cc  vector_random.cpp  vectores01  vectores01.cc
examples/dairo/: Hola.cc  Makefile  Swith.cc  ejecucio2.sh  ejecucion3.sh  ejecucion4.sh  ensayo.cc  prueba1  prueba2  prueba3  struct01.cc  structuresParameters.cc
examples/juliette/: Makefile  ejecuciónjul.sh  euler.cc  hola.cc  parabolica  parabolica.cc  prueba01  prueba02
examples/num0/: Makefile  corona  lr_opcount  matrizen  precision  qr_gram_schmidt.cc  vektoren  wurzel.cc
examples/num1/: Makefile  ecke.cc  eemodelproblem.cc  model_ejemplo  modelproblem.hh  (+3 more)
mystuff/: Makefile  example
notebook/: Exercises_1.ipynb  Exercises_5.ipynb  Exercises_6.ipynb  Exercises_7.ipynb  bisection.cc  factorial.cc
programmierkurs/: programmierkurs.tex
src/: densematrix.hh  lr.hh  newton.hh  ode.hh  qr.hh  qrhousholder.hh  sgrid.hh  sparsematrix.hh  vector.hh
test/: CMakeLists.txt  README.md  builder_sparse_matrix_tests.cc  construction_sparse_matrix.cc  default_sparse_matrix.cc  densematrix_sparse_matrix.cc  example_matrix_market.mtx  operators_sparse_matrix.cc  read_matrix_from_file.cc  readmatrix_simple.ctf  special_matricies_sparse_matrix.cc  test_qr_decomposition.cc  test_qr_gram_schmidt.cc  test_qr_gram_schmidt_matrix_market.cc  test_qr_gram_schmidt_pivoting.cc  test_qrhousholder.cc
tutorial/: CMakeLists.txt  Makefile  crear.sh  hdnum-tutorial-article.tex  hdnum-tutorial-beamer.tex  hdnum-tutorial-main.tex  hdnum.aux  hdnum.blg  hdnum.fdb_latexmk  hdnum.fls  hdnum.out  hdnum.tex  hdnum.toc  hdnum01.aux  hdnum01.blg  hdnum01.dvi  hdnum01.fdb_latexmk  hdnum01.fls  hdnum01.out  hdnum01.tex  hdnum01.tex~  hdnum01.toc
(+116 files in other folders)
